--- a/index.html
+++ b/index.html
@@ -1,12 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/453eafe4dd.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <section class="contenedor maestro">
+      <div class="contenedor padre">
+        <div class="contenedor hijo">
+          <div class="contenedor maria">
+            <div class="contenedor maria1">
+              <img src="assets/imgs/maria.jpg" alt="Imagen de María" />
+            </div>
+
+            <div class="contenedor maria2">
+              <h6>María</h6>
+              <p>Activa ahora</p>
+            </div>
+          </div>
+          <div class="contenedor maria-2">
+            <i class="fa-regular fa-message fa-lg"></i>
+            <i class="fa fa-bars fa-lg"></i>
+          </div>
+        </div>
+        <div class="contenedor boton">
+          <div class="contenedor boton-1">
+            <button type="button" class="btn btn-lg">Nuevo Chat</button>
+          </div>
+        </div>
+        <div class="contenedor hijo1">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg"
+                alt="Imagen de Juanita"
+              />
+            </div>
+
+            <div class="contenedor contacto2">
+              <h6>Juanita</h6>
+              <p>At vero eos et accusa</p>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor hijo1">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.32.16.jpg"
+                alt="Imagen de Alberto"
+              />
+            </div>
+
+            <div class="contenedor contacto2">
+              <h6>Alberto</h6>
+              <p>blanditiis praesentium</p>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor hijo1">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.30.34.jpg"
+                alt="Imagen de Ignacio"
+              />
+            </div>
+
+            <div class="contenedor contacto2">
+              <h6>Ignacio</h6>
+              <p>officiis debitis aut</p>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor hijo1">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.28.30.jpg"
+                alt="Imagen de Cristian"
+              />
+            </div>
+
+            <div class="contenedor contacto2">
+              <h6>Cristian</h6>
+              <p>Nam libero tempore</p>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor hijo1">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.32.44.jpg"
+                alt="Imagen de María José"
+              />
+            </div>
+
+            <div class="contenedor contacto2">
+              <h6>María José</h6>
+              <p>impedit quo minus id</p>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor hijo1">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.31.09.jpg"
+                alt="Imagen de Gonzalo"
+              />
+            </div>
+
+            <div class="contenedor contacto2">
+              <h6>Gonzalo</h6>
+              <p>At vero eos et accusa</p>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor hijo1">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.30.54.jpg"
+                alt="Imagen de Juan Pablo"
+              />
+            </div>
+
+            <div class="contenedor contacto2">
+              <h6>Juan Pablo</h6>
+              <p>At vero eos et accusa</p>
+            </div>
+          </div>
+        </div>
+        <div class="contenedor hijo2">
+          <div class="contenedor contacto">
+            <div class="contenedor contacto1">
+              <img
+                src="assets/imgs/Screen Shot 2018-11-28 at 15.28.04.jpg"
+                alt="Imagen de Magdalena"
+              />
+            </div>
+
+            <div class="contenedor contacto3">
+              <h6>Magdalena</h6>
+              <p>ut et voluptates</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="madre">
+        <div class="hijo3">
+          <img src="assets/imgs/hand.png" alt="Imagen Manos" />
+        </div>
+        <div class="hijo4">
+          <h1>Comienza el Nertworking</h1>
+          <p>
+            Presiona el botón “Nuevo chat” para comenzar a crear nuevas redes de
+            contacto para tu empresa o emprendimiento.
+          </p>
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
