--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     ></script>
   </head>
   <body>
-    <section class="contenedor maestro">
-      <div class="contenedor padre">
+    <main class="contenedor maestro">
+      <section class="contenedor padre">
         <div class="contenedor hijo">
           <div class="contenedor maria">
             <div class="contenedor maria1">
@@ -166,20 +166,18 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="madre">
+      </section>
+      <section class="madre">
         <div class="hijo3">
           <img src="assets/imgs/hand.png" alt="Imagen Manos" />
         </div>
         <div class="hijo4">
           <h1>Comienza el Nertworking</h1>
-          <p>
-            Presiona el botón “Nuevo chat” para comenzar a crear nuevas redes de
-            contacto para tu empresa o emprendimiento.
-          </p>
+          <p>Presiona el botón <b>“Nuevo chat”</b> para comenzar a crear nuevas
+            redes de contacto para tu empresa o emprendimiento.</p>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
