modificación de padding de la seccion de contactos y usuario

--- a/index.html
+++ b/index.html
@@ -173,8 +173,10 @@
         </div>
         <div class="hijo4">
           <h1>Comienza el Nertworking</h1>
-          <p>Presiona el botón <b>“Nuevo chat”</b> para comenzar a crear nuevas
-            redes de contacto para tu empresa o emprendimiento.</p>
+          <p>
+            Presiona el botón <b>“Nuevo chat”</b> para comenzar a crear nuevas
+            redes de contacto para tu empresa o emprendimiento.
+          </p>
         </div>
       </section>
     </main>
