se modifico el padding de la seccio usuario y contactos, tambien se modifico la clase del contenedor usuario

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <main class="contenedor maestro">
       <section class="contenedor padre">
         <div class="contenedor hijo">
-          <div class="contenedor maria">
-            <div class="contenedor maria1">
+          <div class="contenedor usuario">
+            <div class="contenedor usuario1">
               <img src="assets/imgs/maria.jpg" alt="Imagen de María" />
             </div>
 
-            <div class="contenedor maria2">
+            <div class="contenedor usuario2">
               <h6>María</h6>
               <p>Activa ahora</p>
             </div>
           </div>
-          <div class="contenedor maria-2">
+          <div class="contenedor usuario-2">
             <i class="fa-regular fa-message fa-lg"></i>
             <i class="fa fa-bars fa-lg"></i>
           </div>
